@@ -10,6 +10,7 @@ v2.1.4
 ! imdb::movieconnection() was broken due to site changes
 ! imdb_person::born() and imdb_person::died() suddenly missed day and month (site change; thanks to GeorgeFive for the fix!)
 * test suite needed a minor update: our example "uncompleted" movie was completed meanwhile, so the test erraneously reported failure
++ imdb::trailers() was incomplete. Thanks to george (ticket:286) it now should fetch more, and I also added the possibility to decide whether to restrict trailers to on-site ones
 
 v2.1.3 (15.04.2012)
 -------------------
